--- a/UI/credit_user.html
+++ b/UI/credit_user.html
@@ -11,12 +11,13 @@
     <header>
       <div class="container">
         <div id="header-title">
-          <a href="#"><h1>Banka</h1></a>
+          <a href="credit_user.html"><h1>Banka</h1></a>
         </div>
         <div id="header-links">
           <a class="pre-login-link unused-link" href="#">Sign Up</a>
           <a class="pre-login-link unused-link" href="#">Login</a>
-          <p>Logged In As Cashier 1</p>
+          <p>Logged In As Cashier 2</p>
+          <a id="logout" href="index.html">Logout</a>
         </div>
       </div>
     </header>
