--- a/UI/sign_in.html
+++ b/UI/sign_in.html
@@ -11,11 +11,11 @@
     <header>
       <div class="container">
         <div id="header-title">
-          <a href="#"><h1>Banka</h1></a>
+          <a href="index.html"><h1>Banka</h1></a>
         </div>
         <div id="header-links">
-          <a class="pre-login-link" href="#">Sign Up</a>
-          <a class="pre-login-link" href="#">Login</a>
+          <a class="pre-login-link" href="signup.html">Sign Up</a>
+          <a class="pre-login-link" href="sign_in.html">Login</a>
           <a class="unused-link" href="#">Logged in as Osaukhu</a>
         </div>
       </div>
@@ -43,8 +43,12 @@
                 required
               />
             </div>
-            <button class="form-button" type="submit">Login</button>
           </form>
+          <!-- I placed the button here so that it doesn't submit the form just yet,
+          but should rather serve as a link to the Dashboard page -->
+          <a href="dashboard.html"
+            ><button class="form-button">Login</button></a
+          >
         </div>
       </section>
     </main>
