--- a/UI/accounts_list.html
+++ b/UI/accounts_list.html
@@ -11,12 +11,13 @@
     <header>
       <div class="container">
         <div id="header-title">
-          <a href="#"><h1>Banka</h1></a>
+          <a href="accounts_list.html"><h1>Banka</h1></a>
         </div>
         <div id="header-links">
           <a class="pre-login-link unused-link" href="#">Sign Up</a>
           <a class="pre-login-link unused-link" href="#">Login</a>
-          <a href="#">Logged in as Admin</a>
+          <p>Logged In As Admin</p>
+          <a id="logout" href="index.html">Logout</a>
         </div>
       </div>
     </header>
@@ -35,7 +36,7 @@
           </div>
           <div class="acc-list-details">
             <ul>
-              <a href="#"
+              <a href="bank_account_record.html"
                 ><li>
                   <div class="display-full-div">
                     <p class="acc-list-val-0">0034</p>
@@ -45,7 +46,7 @@
                   </div>
                 </li></a
               >
-              <a href="#">
+              <a href="bank_account_record.html">
                 <li>
                   <div class="display-full-div">
                     <p class="acc-list-val-0">0104</p>
@@ -55,7 +56,7 @@
                   </div>
                 </li>
               </a>
-              <a href="#">
+              <a href="bank_account_record.html">
                 <li>
                   <div class="display-full-div">
                     <p class="acc-list-val-0">0649</p>
@@ -65,7 +66,7 @@
                   </div>
                 </li>
               </a>
-              <a href="#">
+              <a href="bank_account_record.html">
                 <li>
                   <div class="display-full-div">
                     <p class="acc-list-val-0">0209</p>
@@ -76,7 +77,7 @@
                 </li>
               </a>
 
-              <a href="#">
+              <a href="bank_account_record.html">
                 <li>
                   <div class="display-full-div">
                     <p class="acc-list-val-0">0034</p>
@@ -86,7 +87,7 @@
                   </div>
                 </li>
               </a>
-              <a href="#">
+              <a href="bank_account_record.html">
                 <li>
                   <div class="display-full-div">
                     <p class="acc-list-val-0">0104</p>
@@ -96,7 +97,7 @@
                   </div>
                 </li>
               </a>
-              <a href="#">
+              <a href="bank_account_record.html">
                 <li>
                   <div class="display-full-div">
                     <p class="acc-list-val-0">0649</p>
@@ -106,7 +107,7 @@
                   </div>
                 </li>
               </a>
-              <a href="#">
+              <a href="bank_account_record.html">
                 <li>
                   <div class="display-full-div">
                     <p class="acc-list-val-0">0649</p>
@@ -116,7 +117,7 @@
                   </div>
                 </li>
               </a>
-              <a href="#">
+              <a href="bank_account_record.html">
                 <li>
                   <div class="display-full-div">
                     <p class="acc-list-val-0">0649</p>
