--- a/UI/cr_admin_staff.html
+++ b/UI/cr_admin_staff.html
@@ -11,12 +11,13 @@
     <header>
       <div class="container">
         <div id="header-title">
-          <a href="#"><h1>Banka</h1></a>
+          <a href="cr_admin_staff.html"><h1>Banka</h1></a>
         </div>
         <div id="header-links">
           <a class="pre-login-link unused-link" href="#">Sign Up</a>
           <a class="pre-login-link unused-link" href="#">Login</a>
-          <a href="#">Logged in as Admin</a>
+          <p>Logged In As Admin</p>
+          <a id="logout" href="index.html">Logout</a>
         </div>
       </div>
     </header>
