--- a/UI/dashboard.html
+++ b/UI/dashboard.html
@@ -11,12 +11,13 @@
     <header>
       <div class="container">
         <div id="header-title">
-          <a href="#"><h1>Banka</h1></a>
+          <a href="dashboard.html"><h1>Banka</h1></a>
         </div>
         <div id="header-links">
-          <a class="pre-login-link unused-link" href="#">Sign Up</a>
-          <a class="pre-login-link unused-link" href="#">Login</a>
+          <a class="pre-login-link unused-link" href="signup.html">Sign Up</a>
+          <a class="pre-login-link unused-link" href="sign_in.html">Login</a>
           <p>Logged In As Osaukhumwen</p>
+          <a id="logout" href="index.html">Logout</a>
         </div>
       </div>
     </header>
