--- a/UI/signup.html
+++ b/UI/signup.html
@@ -11,7 +11,7 @@
     <header>
       <div class="container">
         <div id="header-title">
-          <a href="signup.html"><h1>Banka</h1></a>
+          <a href="index.html"><h1>Banka</h1></a>
         </div>
         <div id="header-links">
           <a class="pre-login-link" href="signup.html">Sign Up</a>
@@ -70,7 +70,7 @@
               </div>
               <div class="display-half-div right-side">
                 <input
-                  type="number"
+                  type="text"
                   placeholder="Age"
                   pattern="[0-9]{1,3}"
                   title="Numbers only. Max 3 digits"
@@ -141,8 +141,12 @@
               title="Must be between Six(6) to Ten(10) characters"
               required
             />
-            <button class="form-button" type="submit">Sign Up</button>
           </form>
+          <!-- I placed the button here so that it doesn't submit the form just yet,
+          but should rather serve as a link to the Create Account page -->
+          <a href="create_account.html"
+            ><button class="form-button">Sign Up</button></a
+          >
         </div>
       </section>
     </main>
