Add navbar to accounts_list page

--- a/UI/accounts_list.html
+++ b/UI/accounts_list.html
@@ -22,6 +22,15 @@
       </div>
     </header>
     <main>
+      <section id="staff-navbar">
+        <div class="container">
+          <a href="cr_admin_staff.html">New Staff</a>
+          <div class="bnk-ops">
+            <a href="credit_user.html">Deposit</a>
+            <a href="debit_user.html">Withdrawal</a>
+          </div>
+        </div>
+      </section>
       <section id="accounts-list" class="container">
         <h3 id="dashboard-main-title" class="dashboard-section-title">
           Accounts List
@@ -41,7 +50,7 @@
                   <div class="display-full-div">
                     <p class="acc-list-val-0">0034</p>
                     <p class="acc-list-val-1">2031279458</p>
-                    <p class="acc-list-val-2">Igbinovia Osamiemefan-Uroghide</p>
+                    <p class="acc-list-val-2">Sundar Pichai</p>
                     <p class="acc-list-val-0">Savings</p>
                   </div>
                 </li></a
@@ -82,7 +91,7 @@
                   <div class="display-full-div">
                     <p class="acc-list-val-0">0034</p>
                     <p class="acc-list-val-1">20312794587</p>
-                    <p class="acc-list-val-2">Osaukhumwen Iyamuosa</p>
+                    <p class="acc-list-val-2">Eden Hazard</p>
                     <p class="acc-list-val-0">Savings</p>
                   </div>
                 </li>
@@ -92,7 +101,7 @@
                   <div class="display-full-div">
                     <p class="acc-list-val-0">0104</p>
                     <p class="acc-list-val-1">1087673271</p>
-                    <p class="acc-list-val-2">Jermaine Cole</p>
+                    <p class="acc-list-val-2">Satya Nadella</p>
                     <p class="acc-list-val-0">Current</p>
                   </div>
                 </li>
@@ -102,7 +111,7 @@
                   <div class="display-full-div">
                     <p class="acc-list-val-0">0649</p>
                     <p class="acc-list-val-1">1065892356</p>
-                    <p class="acc-list-val-2">Cristiano Ronaldo</p>
+                    <p class="acc-list-val-2">Blake Lively</p>
                     <p class="acc-list-val-0">Current</p>
                   </div>
                 </li>
@@ -112,7 +121,7 @@
                   <div class="display-full-div">
                     <p class="acc-list-val-0">0649</p>
                     <p class="acc-list-val-1">1065892356</p>
-                    <p class="acc-list-val-2">Cristiano Ronaldo</p>
+                    <p class="acc-list-val-2">Mohini Ufeli</p>
                     <p class="acc-list-val-0">Current</p>
                   </div>
                 </li>
@@ -122,7 +131,7 @@
                   <div class="display-full-div">
                     <p class="acc-list-val-0">0649</p>
                     <p class="acc-list-val-1">1065892356</p>
-                    <p class="acc-list-val-2">Cristiano Ronaldo</p>
+                    <p class="acc-list-val-2">Jeff Bezos</p>
                     <p class="acc-list-val-0">Current</p>
                   </div>
                 </li>
