--- a/UI/cr_admin_staff.html
+++ b/UI/cr_admin_staff.html
@@ -11,7 +11,7 @@
     <header>
       <div class="container">
         <div id="header-title">
-          <a href="cr_admin_staff.html"><h1>Banka</h1></a>
+          <a href="accounts_list.html"><h1>Banka</h1></a>
         </div>
         <div id="header-links">
           <a class="pre-login-link unused-link" href="#">Sign Up</a>
