--- a/UI/credit_user.html
+++ b/UI/credit_user.html
@@ -11,7 +11,7 @@
     <header>
       <div class="container">
         <div id="header-title">
-          <a href="credit_user.html"><h1>Banka</h1></a>
+          <a href="accounts_list.html"><h1>Banka</h1></a>
         </div>
         <div id="header-links">
           <a class="pre-login-link unused-link" href="#">Sign Up</a>
